--- a/admi.html
+++ b/admi.html
@@ -8,7 +8,7 @@
     <title>Administrador</title>
 </head>
 
-<body background="Imagenes/admin.jpg">
+<body background="Imagenes/28.jpg">
 
     <form action="./contacto.php" >
         <div class="mb-3">
