--- a/admi.html
+++ b/admi.html
@@ -8,22 +8,30 @@
     <title>Administrador</title>
 </head>
 
-<body background="Imagenes/28.jpg">
+<body background="Imagenes/143.jpg">
 
     <form action="./contacto.php" >
-        <div class="mb-3">
+
+        <div class="container">
+          <div class="abs-center">
+            <form action="#" class="border p-3 form">
+              <div class="form-group">
           <label for="exampleInputEmail1" class="form-label">Email</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">No compartiremos su correo electronico</div>
         </div>
-        <div class="mb-3">
+        </div>
+
+        <div class="form-group">
           <label for="example InputPassword1" class="form-label">Contraseña</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <div class="mb-3 form-check">
+
+        <div class="container">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
+        
         <button type="submit" class="btn btn-primary">Submit</button>
         
   
